--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.3.28",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
